# rsv

./: .gitignore  Cargo.toml  README.md  output.srt  rsv.config.json
rsv-asr/: Cargo.toml
rsv-asr/src/: bridge.rs  engine.rs  error.rs  lib.rs
rsv-cli/: Cargo.toml
rsv-cli/src/: main.rs
rsv-core/: Cargo.toml
rsv-core/src/: config.rs  error.rs  lib.rs  types.rs
rsv-translate/: Cargo.toml
rsv-translate/src/: bridge.rs  engine.rs  error.rs  lib.rs
rsv-tts/: Cargo.toml
rsv-tts/src/: bridge.rs  engine.rs  error.rs  lib.rs
scripts/: asr_faster_whisper.py  assemble.py  pipeline.py  quick_run.sh  resume_tts.py  test_clone.py  translate_m2m100.py  tts_qwen3.py  tts_segment.py
