[package]
name = "rsv-asr"
version = "0.1.0"
edition = "2021"
description = "RSV - Automatic Speech Recognition module (Faster-Whisper)"

[dependencies]
rsv-core = { path = "../rsv-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
