[package]
name = "rsv-cli"
version = "0.1.0"
edition = "2021"
description = "RSV - CLI entry point"

[dependencies]
rsv-core = { path = "../rsv-core" }
rsv-asr = { path = "../rsv-asr" }
rsv-translate = { path = "../rsv-translate" }
rsv-tts = { path = "../rsv-tts" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
