[package]
name = "rsv-core"
version = "0.1.0"
edition = "2021"
description = "RSV - Core types, configuration, and common utilities"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
